# ros2CV

./: README.md
cv_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
cv_ws/install/pyPublish/lib/pyPublish/: cam2image
cv_ws/install/pyPublish/share/pyPublish/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
cv_ws/install/ros2_interfaces/share/ros2_interfaces/: package.sh
cv_ws/install/test_rclcpp/lib/test_rclcpp/: webcam_pub  webcam_sub
cv_ws/install/test_rclcpp/share/test_rclcpp/: package.bash  package.sh  package.zsh
cv_ws/install/topic/share/topic/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
cv_ws/install/topic2/lib/topic2/: image_pub  image_sub
cv_ws/install/topic2/share/topic2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
cv_ws/install/topic_interfaces/share/topic_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
cv_ws/install/webcam_topic/lib/webcam_topic/: webcam_pub  webcam_sub
cv_ws/install/webcam_topic/share/webcam_topic/: local_setup.sh  package.sh  (+4 more)
cv_ws/log/: latest_build  latest_list
cv_ws/src/pyPublish/: package.xml  setup.cfg  setup.py
cv_ws/src/test_rclcpp/: CMakeLists.txt  package.xml
cv_ws/src/test_rclcpp/src/: webcam_pub.cpp  webcam_sub.cpp  yolo.cpp
cv_ws/src/topic/: CMakeLists.txt
cv_ws/src/topic/include/: global.h
cv_ws/src/topic/src/: image_pub.cpp  image_sub.cpp  yolo.cpp
cv_ws/src/topic2/: CMakeLists.txt  package.xml
cv_ws/src/topic2/src/: image_pub.cpp  image_sub.cpp  yolo.cpp  yolo.hpp
cv_ws/src/topic_interfaces/: CMakeLists.txt  package.xml
cv_ws/src/webcam_service/: CMakeLists.txt  package.xml
cv_ws/src/webcam_service/include/: global.h
cv_ws/src/webcam_service/src/: client.cpp  server.cpp  yolo.cpp
cv_ws/src/webcam_topic/: CMakeLists.txt
cv_ws/src/webcam_topic/src/: webcam_pub.cpp  webcam_sub.cpp
cv_ws/src/yolo_topic/: CMakeLists.txt
cv_ws/src/yolo_topic/include/: global.h
cv_ws/src/yolo_topic/src/: yolo_pub.cpp  yolo_sub.cpp
datasets/H/labels/: mosaic0.xml  mosaic1.xml  mosaic10.xml  mosaic100.xml  mosaic1000.xml  mosaic1001.xml  mosaic1002.xml  mosaic1003.xml  mosaic1004.xml  mosaic1005.xml  mosaic1006.xml  mosaic1007.xml  mosaic1008.xml  mosaic1009.xml  mosaic101.xml  mosaic1010.xml  mosaic1011.xml  mosaic1012.xml  mosaic1013.xml  mosaic1014.xml  mosaic1015.xml  mosaic1016.xml  mosaic1017.xml  mosaic1018.xml  mosaic1019.xml  mosaic102.xml  mosaic1020.xml  mosaic1021.xml  mosaic1022.xml  mosaic1023.xml  mosaic1024.xml  mosaic1025.xml  mosaic1026.xml  mosaic1027.xml  mosaic1028.xml  mosaic1029.xml  mosaic103.xml  mosaic1030.xml  mosaic1031.xml  mosaic1032.xml  (+4960 more)
datasets/circle/labels/: mosaic0.xml  mosaic1.xml  mosaic10.xml  mosaic100.xml  mosaic101.xml  mosaic102.xml  mosaic103.xml  mosaic104.xml  mosaic105.xml  mosaic106.xml  mosaic107.xml  mosaic108.xml  mosaic109.xml  mosaic11.xml  mosaic110.xml  mosaic111.xml  mosaic112.xml  mosaic113.xml  mosaic114.xml  mosaic115.xml  mosaic116.xml  mosaic117.xml  mosaic118.xml  mosaic119.xml  mosaic12.xml  mosaic120.xml  mosaic121.xml  mosaic122.xml  mosaic123.xml  mosaic124.xml  mosaic125.xml  mosaic126.xml  mosaic127.xml  mosaic128.xml  mosaic129.xml  mosaic13.xml  mosaic130.xml  mosaic131.xml  mosaic132.xml  mosaic133.xml  (+2721 more)
(+42 files in other folders)
